--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,21 @@
       document.title = data.content.value;
     })
     .catch(error => console.error('Failed to fetch title:', error));
+  // api để fetch favicon
+  fetch('https://dichvumang86.cloud/setting/6')
+    .then(response => response.json())
+    .then(data => {
+      const link = document.querySelector("link[rel~='icon']");
+      if (!link) {
+        const newLink = document.createElement('link');
+        newLink.rel = 'icon';
+        newLink.href = data.content.value;
+        document.head.appendChild(newLink);
+      } else {
+        link.href = data.content.value;
+      }
+    })
+    .catch(error => console.error('Failed to fetch favicon:', error));
 </script>
 
 </html>
