--- a/client/index.html
+++ b/client/index.html
@@ -40,18 +40,22 @@
     })
     .catch(error => console.error('Failed to fetch title:', error));
   // api để fetch favicon
+  const BASE_URL = 'https://res.cloudinary.com/dcvkmhlhw/image/upload/v1733480370/';
   fetch('https://dichvumang86.cloud/setting/6')
     .then(response => response.json())
     .then(data => {
-      const link = document.querySelector("link[rel~='icon']");
-      if (!link) {
-        const newLink = document.createElement('link');
-        newLink.rel = 'icon';
-        newLink.href = data.content.value;
-        document.head.appendChild(newLink);
-      } else {
-        link.href = data.content.value;
-      }
+        const link = document.querySelector("link[rel~='icon']");
+        const faviconFileName = data.content.value;  
+        const faviconUrl = `${BASE_URL}/${faviconFileName}`; 
+
+        if (!link) {
+            const newLink = document.createElement('link');
+            newLink.rel = 'icon';
+            newLink.href = faviconUrl; 
+            document.head.appendChild(newLink);
+        } else {
+            link.href = faviconUrl; 
+        }
     })
     .catch(error => console.error('Failed to fetch favicon:', error));
 </script>
