--- a/backend/checkbank.html
+++ b/backend/checkbank.html
@@ -4,20 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Payment and Transaction History</title>
+    <title>Thông Tin Hệ Thống</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
             background-color: #f4f4f9;
+            padding: 20px;
         }
 
         .container {
-            text-align: center;
             background: white;
             padding: 20px;
             border-radius: 10px;
@@ -25,108 +20,49 @@
         }
 
         h1 {
-            margin-bottom: 20px;
             color: #333;
         }
 
-        #qr-code {
-            margin: 20px 0;
-            border: 1px solid #ddd;
-            padding: 10px;
-            display: inline-block;
-        }
-
-        button {
+        .info {
             margin-top: 20px;
-            padding: 10px 20px;
-            border: none;
-            background-color: #007bff;
-            color: white;
-            font-size: 16px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        .status {
-            margin-top: 20px;
-            font-size: 16px;
-            padding: 10px;
-            border-radius: 5px;
-        }
-
-        .status.pending {
-            color: #842029;
-            background-color: #f8d7da;
-        }
-
-        .status.paid {
-            color: #0f5132;
-            background-color: #d1e7dd;
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>QR Payment with VietQR</h1>
-        <div id="qr-code"></div>
-        <button id="check-status">Check Payment Status</button>
-        <div id="status" class="status pending">Waiting for payment...</div>
+        <h1>Thông Tin Hệ Thống</h1>
+        <div class="info" id="system-info">
+            <!-- Thông tin sẽ được hiển thị ở đây -->
+        </div>
     </div>
 
     <script>
-        const bankCode = "MBBank";
-        const accountNumber = "9704229258177489";
-        const accountName = "LE NGUYEN HOANG THIEN";
-        const amount = 2000;
-        const description = "naptien52";
-        const template = "TEMPLATE";
-
-        // Generate VietQR URL
-        const vietQRUrl = `https://img.vietqr.io/image/${bankCode}-${accountNumber}-${template}.png?amount=${amount}&addInfo=${encodeURIComponent(description)}&accountName=${encodeURIComponent(accountName)}`;
-
-        // Render QR Code
-        const qrCodeElement = document.getElementById("qr-code");
-        const qrImage = document.createElement("img");
-        qrImage.src = vietQRUrl;
-        qrImage.alt = "QR Code";
-        qrImage.style.width = "250px";
-        qrImage.style.height = "250px";
-        qrCodeElement.appendChild(qrImage);
-
-        // Check payment status
-        document.getElementById("check-status").addEventListener("click", async () => {
-            const statusElement = document.getElementById("status");
-
+        const fetchSystemInfo = async () => {
             try {
-                const response = await fetch("http://localhost:8080/check-transactions", {
-                    method: "GET",
-                });
-
-                if (!response.ok) {
-                    throw new Error("Failed to fetch transaction status");
-                }
-
+                const response = await fetch('http://localhost:8080/system-info');
                 const data = await response.json();
-
-                // Check if there are any updated orders and if they are marked as paid
-                if (data.updatedOrders && data.updatedOrders.some(order => order.status === 'paid')) {
-                    statusElement.className = "status paid";
-                    statusElement.innerText = "Payment Completed!";
-                } else {
-                    statusElement.className = "status pending";
-                    statusElement.innerText = "Waiting for payment...";
-                }
+                displaySystemInfo(data);
             } catch (error) {
-                console.error(error);
-                statusElement.className = "status pending";
-                statusElement.innerText = "Error checking payment status.";
+                console.error('Lỗi khi lấy thông tin hệ thống:', error);
             }
-        });
+        };
+
+        const displaySystemInfo = (data) => {
+            const infoDiv = document.getElementById('system-info');
+            infoDiv.innerHTML = `
+                <p><strong>CPU:</strong> ${data.cpu.brand} (${data.cpu.manufacturer})</p>
+                <p><strong>Tốc độ:</strong> ${data.cpu.speed} GHz</p>
+                <p><strong>Số lõi:</strong> ${data.cpu.cores}</p>
+                <p><strong>Tổng bộ nhớ:</strong> ${(data.memory.total / (1024 * 1024 * 1024)).toFixed(2)} GB</p>
+                <p><strong>Bộ nhớ đã sử dụng:</strong> ${(data.memory.used / (1024 * 1024 * 1024)).toFixed(2)} GB</p>
+                <p><strong>Bộ nhớ còn lại:</strong> ${(data.memory.free / (1024 * 1024 * 1024)).toFixed(2)} GB</p>
+                <p><strong>Thời gian:</strong> ${data.timestamp}</p>
+            `;
+        };
+
+        // Gọi hàm để lấy thông tin hệ thống khi trang được tải
+        fetchSystemInfo();
     </script>
 </body>
 
